# bettr

./: README.md  a_i_generated_code.py  pyproject.toml
src/: teams.csv
src/bettr/config/: base_settings.py  settings.py  urls.py
src/bettr/core/config/: path_config.py
src/bettr/data/nba/: rTest.ipynb  teams.py
src/bettr/data/nba/games/: games.py
src/bettr/data/nba/teams/: rosters.csv  teams.csv
src/bettr/models/: base.py
src/bettr/utilities/: env_setup.py  log.py  paths.py
